force-app/main/default/objects/Hotel__c/fields/Country__c.field-meta.xml
<CustomField>
    <fullName>Country__c</fullName>
    <label>Country</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>China</fullName>
            </value>
            <value>
                <fullName>India</fullName>
            </value>
            <value>
                <fullName>United States</fullName>
            </value>
            <value>
                <fullName>Indonesia</fullName>
            </value>
            <value>
                <fullName>Pakistan</fullName>
            </value>
            <value>
                <fullName>Brazil</fullName>
            </value>
            <value>
                <fullName>Nigeria</fullName>
            </value>
            <value>
                <fullName>Bangladesh</fullName>
            </value>
            <value>
                <fullName>Russia</fullName>
            </value>
            <value>
                <fullName>Mexico</fullName>
            </value>
            <value>
                <fullName>Japan</fullName>
            </value>
            <value>
                <fullName>Ethiopia</fullName>
            </value>
            <value>
                <fullName>Philippines</fullName>
            </value>
            <value>
                <fullName>Egypt</fullName>
            </value>
            <value>
                <fullName>Vietnam</fullName>
            </value>
            <value>
                <fullName>DR Congo</fullName>
            </value>
            <value>
                <fullName>Turkey</fullName>
            </value>
            <value>
                <fullName>Iran</fullName>
            </value>
            <value>
                <fullName>Germany</fullName>
            </value>
            <value>
                <fullName>Thailand</fullName>
            </value>
            <value>
                <fullName>United Kingdom</fullName>
            </value>
            <value>
                <fullName>France</fullName>
            </value>
            <value>
                <fullName>Italy</fullName>
            </value>
            <value>
                <fullName>Tanzania</fullName>
            </value>
            <value>
                <fullName>South Africa</fullName>
            </value>
            <value>
                <fullName>Myanmar</fullName>
            </value>
            <value>
                <fullName>Kenya</fullName>
            </value>
            <value>
                <fullName>South Korea</fullName>
            </value>
            <value>
                <fullName>Colombia</fullName>
            </value>
            <value>
                <fullName>Spain</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>