force-app/main/default/objects/Hotel__c/fields/Rooms_Available__c.field-meta.xml
<CustomField>
    <fullName>Rooms_Available__c</fullName>
    <label>Rooms Available</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>