force-app/main/default/objects/Hotel__c/fields/Rooms_out_of_service__c.field-meta.xml
<CustomField>
    <fullName>Rooms_out_of_service__c</fullName>
    <label>Rooms out of service</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>