force-app/main/default/objects/Hotel__c/fields/Total_Rented_Rooms__c.field-meta.xml
<CustomField>
    <fullName>Total_Rented_Rooms__c</fullName>
    <label>Total Rented Rooms</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>