force-app/main/default/objects/Hotel__c/fields/total_rooms__c.field-meta.xml
<CustomField>
    <fullName>total_rooms__c</fullName>
    <label>Total Rooms</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>