force-app/main/default/objects/Hotel__c/fields/TTM_ACV__c.field-meta.xml
<CustomField>
    <fullName>TTM_ACV__c</fullName>
    <label>Trailing 12 Month ACV</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>