force-app/main/default/objects/Hotel__c/fields/zip_code__c.field-meta.xml
<CustomField>
    <fullName>zip_code__c</fullName>
    <label>Postal Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>