force-app/main/default/objects/Hotel__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>City__c</columns>
    <columns>Rating__c</columns>
    <columns>total_rooms__c</columns>
    <columns>Rooms_Available__c</columns>
    <columns>Total_Rented_Rooms__c</columns>
    <columns>Rooms_out_of_service__c</columns>
    <columns>TTM_ACV__c</columns>
    <columns>OWNER.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>